--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -61,6 +61,7 @@ h2{
 
 .btn-link:hover{
     background-color: #06281f ;
+    color: white;
 }
 
 .btn-vaciar{
@@ -87,4 +88,24 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (max-width: 850px) {
+
+    .imagen-producto-carrito{
+        width: 4rem;
+    }
+    
+    h4{
+        font-size: 1rem;
+    }
+
+    .product-in-cart{
+        gap: 1rem
+    }
+
+    .products-container{
+        width: 90%;
+        left: 5%;
+    }
 }
