--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -14,3 +14,15 @@
 h2{
     margin-top: 1.2rem;
 }
+
+@media screen and (max-width: 1120px){
+    .products{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 850px){
+    .products{
+        grid-template-columns: 1fr;
+    }
+}
