--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,6 +1,6 @@
 .container-detail{
     width: 100%;
-    min-height: 81vh;
+    min-height: 83vh;
     background-color: #eaead1;
     display: flex;
     flex-direction: column;
@@ -57,6 +57,9 @@ h2{
     border-radius: 0.5rem;
     transition: 0.2s ease;
     width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn-link:hover{
@@ -93,7 +96,8 @@ h2{
 @media screen and (max-width: 850px) {
 
     .imagen-producto-carrito{
-        width: 4rem;
+        width: 5rem;
+        margin-bottom: 10px;
     }
     
     h4{
@@ -101,11 +105,17 @@ h2{
     }
 
     .product-in-cart{
-        gap: 1rem
+        flex-direction: column;
     }
 
     .products-container{
         width: 90%;
         left: 5%;
+    }
+
+    .eliminar-item{
+        position: absolute;
+        top: 20px;
+        right: 20px
     }
 }
